--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "server": "json-server --watch ./mocks/fakedb.json --host 0.0.0.0 --port 3333",
     "test": "jest",
     "lint": "eslint ./src"
   },
@@ -17,6 +18,9 @@
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
     "axios": "^0.19.2",
+    "card-validator": "^8.1.0",
+    "credit-card-type": "^9.0.1",
+    "date-fns": "^2.16.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.0",
@@ -27,6 +31,7 @@
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-shadow": "^1.2.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.0.0",
     "styled-components": "^5.1.1",
@@ -45,6 +50,7 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^25.1.0",
+    "json-server": "^0.16.1",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.13.1"
   },
