--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "server": "json-server --watch ./mocks/fakedb.json --host 0.0.0.0 --port 3333",
+    "server": "json-server --watch ./server/fakedb.json --host 0.0.0.0 --port 3333",
     "test": "jest",
     "lint": "eslint ./src"
   },
